[package]
authors = ["willemml <willem@leit.so>"]
edition = "2018"
readme = "README.md"
name = "ed-joy"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.7.0", features = ["ld", "rt", "stm32f303xc"] }
usb-device = "0.2.8"
usbd-hid = "0.5.0"

# this lets you use `cargo fix`!
[[bin]]
name = "ed-joy"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
